# afl-parity

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  mypy.ini  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
output/: combined_outputs.json
output/1900/: 1900_dfs_traversal_output.json
output/1901/: 1901_dfs_traversal_output.json
output/1903/: 1903_dfs_traversal_output.json
output/1904/: 1904_dfs_traversal_output.json
output/1905/: 1905_dfs_traversal_output.json
output/1906/: 1906_dfs_traversal_output.json
output/1907/: 1907_dfs_traversal_output.json
output/1908/: 1908_dfs_traversal_output.json
output/1909/: 1909_dfs_traversal_output.json
output/1910/: 1910_dfs_traversal_output.json
output/1911/: 1911_dfs_traversal_output.json
output/1912/: 1912_dfs_traversal_output.json
output/1915/: 1915_dfs_traversal_output.json
output/1916/: 1916_dfs_traversal_output.json
output/1917/: 1917_dfs_traversal_output.json
output/1918/: 1918_dfs_traversal_output.json
output/1920/: 1920_dfs_traversal_output.json
output/1921/: 1921_dfs_traversal_output.json
output/1922/: 1922_dfs_traversal_output.json
output/1923/: 1923_dfs_traversal_output.json
output/1924/: 1924_dfs_traversal_output.json
output/1925/: 1925_dfs_traversal_output.json
output/1927/: 1927_dfs_traversal_output.json
output/1929/: 1929_dfs_traversal_output.json
output/1930/: 1930_dfs_traversal_output.json
scripts/: feed.sh  run.sh  run_docker.sh
scripts/dev/: code_quality.sh
src/: main.py
tests/: pytest.ini
(+117 files in other folders)
