[project]
name = "afl-parity"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.16",
    "matplotlib>=3.10.1",
    "pydantic>=2.10.6",
    "uv>=0.6.5",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.9.9",
    "pytest>=8.3.5",
]
